--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,7 +1,28 @@
-body{
-    text-align: center;
-margin: auto;
-width: auto;
-border: 6px dotted rgb(211, 25, 127);
+header {
+    display: flex;
+    justify-content: space-between;
+}
 
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1, h2, h3, h4 {
+    font-size: 200%;
+}
+
+button {
+    background-color: navy;
+    color: white;
+    width: 100px;
+    border: 2px solid black;
+    border-radius: 5px;
+    margin: 5px;
+}
+
+.score-page section {
+    display: flex;
+    align-items: center;
 }
